sa: delete comments

--- a/shuffled_pathway/sa.ipynb
+++ b/shuffled_pathway/sa.ipynb
@@ -6,7 +6,6 @@
    "source": [
     "import random\n",
     "import numpy as np\n",
-    "from scipy import rand, randn\n",
     "from typing import List\n",
     "import  matplotlib.pyplot as plt\n",
     "from scipy.special import loggamma\n",
@@ -69,11 +68,8 @@
     "    exps = []\n",
     "    prob_new_solution = 0\n",
     "    for i in range(n_iterations):\n",
-    "    # for i in range(n_iterations):\n",
-    "        for _ in range(iter_per_temp):\n",
-    "            # t = 1 - (i + 1) / n_iterations\n",
+    "        for j in range(iter_per_temp):\n",
     "            new_solution = move(solution)\n",
-    "            # -100 - -99 = -100 + 99 = -1\n",
     "            prob_solution = prob(matrix, solution)\n",
     "            prob_new_solution = prob(matrix, new_solution)\n",
     "            delta = prob_solution - prob_new_solution\n",
@@ -81,17 +77,12 @@
     "                solution = new_solution\n",
     "                probs.append(prob_new_solution)\n",
     "            else:\n",
-    "\n",
     "                exp = np.exp(-delta / temp)\n",
-    "                # print(make_alg_info(temp, delta, (prob_solution - prob_new_solution) / temp, exp))\n",
     "               \n",
     "                if random.uniform(0, 1) < exp:\n",
     "                    solution = new_solution\n",
     "                    probs.append(prob_new_solution)\n",
-    "        # if i % 10 == 0:\n",
-    "        #     print(f\"Old solution {prob_solution}, new solution {prob_new_solution}\")\n",
     "        temp *= a\n",
-    "        # print(f\"Current temperature {temp}\")\n",
     "\n",
     "        \n",
     "    return probs, solution, prob_solution, exps"
